--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "framer-motion": "^12.23.26",
+    "gsap": "^3.14.2",
     "hamburger-react": "^2.5.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
